--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
